<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mjt.so46145559friendsdb.friends">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        />
    <EditText
        android:id="@+id/firstnameinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname_hint"
        android:inputType="text"/>
    <EditText
        android:id="@+id/lastnameinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname_hint"
        android:inputType="text"/>
    <Spinner
        android:id="@+id/genderinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </Spinner>
    <EditText
        android:id="@+id/ageinput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="3"
        android:inputType="number"/>
    <EditText
        android:id="@+id/addressinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_hint"
        android:inputType="text"/>
    <Button
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"/>
    <Button
        android:id="@+id/viewbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_button_text"/>
</LinearLayout>
